Ensure utterance styles for doc pages don't spill over into transcripts.

--- a/user-interface/src/main/angular/projects/labbcat-view/src/styles.css
+++ b/user-interface/src/main/angular/projects/labbcat-view/src/styles.css
@@ -227,7 +227,7 @@ input[type=number] {
 
 /* For utterances in documentation pages */
 
-.utterance {
+section.utterance {
     padding: 10px;
     margin: 1em 0;    
     background: rgba(133, 144, 68, 0.5);
@@ -236,14 +236,14 @@ input[type=number] {
     flex-direction: column;
 }
 
-.utterance-audio {
+section.utterance .utterance-audio {
     margin: auto;
     width: 98%;
     text-align: center;
     margin-bottom: 10px;
     border-radius: 10px;
 }
-.utterance-description {
+section.utterance .utterance-description {
     padding: 10px;
     margin: 5px;
     text-align: center;
@@ -252,17 +252,17 @@ input[type=number] {
     display: flex;
     flex-direction: column;
 }
-.phrase::before {
+section.utterance .phrase::before {
     content: attr(title) " : ";
     font-weight: bold;
 }
-.words {
+section.utterance .words {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
-.token {
+section.utterance .token {
     padding: 2px;
     display: flex;
     flex-direction: column;   
